--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "dest": "index.js"
-    }
-  ]
-}
+    "version": 2,
+    "routes": [
+      {
+        "src": "/",
+        "dest": "index.js"
+      }
+    ]
+  }
+  
